--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
     src: url(fonts/Roboto-Regular.ttf) format('truetype');
 }
 
-:root{
+:root {
     --grid-cols: 1;
     --grid-rows: 1;
     --size: 25px;
 }
 
 
-body{
+body {
     display: flex;
     height: 1fr;
     flex-direction: column;
@@ -21,7 +21,7 @@ body{
     flex: 1;
 }
 
-a{
+a {
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -29,8 +29,8 @@ a{
     color: black;
 }
 
-#container {   
-	display: grid;
+#container {
+    display: grid;
     grid-template-columns: repeat(var(--grid-cols), var(--size));
     grid-template-rows: repeat(var(--grid-rows), var(--size));
     padding: 25px;
@@ -39,7 +39,7 @@ a{
     background-color: rgb(192, 22, 22);
 }
 
-#buttonContainer{
+#buttonContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -47,7 +47,7 @@ a{
     gap: 18px;
 }
 
-button { 
+button {
     transition-duration: 0.3s;
     background-color: aliceblue;
     color: black;
@@ -64,7 +64,8 @@ button {
 
 button:hover {
     background-color: #384558;
-    color: rgb(192, 22, 22);;
+    color: rgb(192, 22, 22);
+    ;
 }
 
 button:active {
@@ -73,11 +74,11 @@ button:active {
     transform: translateY(2px);
 }
 
-.board{
+.board {
     background-color: aliceblue;
 }
 
-.credits{
+.credits {
     font-family: 'Roboto';
     width: 99%;
     font-weight: bold;
@@ -85,6 +86,6 @@ button:active {
     align-items: center;
     justify-self: stretch;
     justify-content: space-between;
-    margin:8px;
-    
+    margin: 8px;
+
 }
